# kicad_cruncher

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.html  setup.html
docs/adrs/: ADR-0001-versioning-tagging-release-policy.md  ADR-0002-cli-install-and-dependency-discipline.md  ADR-0003-documentation-lifecycle-and-release-boundary.md  ADR-0004-design-doc-and-test-ownership-signoff.md  ADR-0005-plugin-daemon-ownership.md  ADR-0006-generated-jsonc-config-comments.md  README.md
docs/contracts/: README.md  bom_pnp_config.v1.schema.json  command_manifest.v0.json  interface_design_manifest.v0.json  pcb_clean_config.v0.schema.json  pcb_layer_step_config.v2.schema.json  pcb_svg_config.a0.schema.json
docs/design/: README.md  index.html  quality-signoff-status.md  styles.css
docs/design/api/: index.html
docs/design/cli/: bom.html  daemon.html  design.html  index.html  jlc.html  kicad.html  pcb-layer-step.html  pcb-svg.html  pcb.html  plugin.html  pnp.html  schematic.html  version.html
docs/plans/: kicad-plugin-daemon-framework.md  pcb-svg-assembly-virtual-layer-fix.md
docs/releases/: 2026-05-31.md  2026-06-03.md  2026-06-04.md  2026-06-06.md  2026-06-07.md  2026-06-10.md  2026-06-11.md  2026-06-13.md
src/py/kicad_cruncher/: __init__.py  __main__.py  _cli.py  _version.py  bom_pnp_cli_common.py  bom_pnp_model.py  config_json.py  kicad_cruncher_cmd_bom.py  kicad_cruncher_cmd_daemon.py  kicad_cruncher_cmd_design.py  kicad_cruncher_cmd_jlc.py  kicad_cruncher_cmd_kicad.py  kicad_cruncher_cmd_pcb.py  kicad_cruncher_cmd_pcb_layer_step.py  kicad_cruncher_cmd_pcb_svg.py  kicad_cruncher_cmd_plugin.py  kicad_cruncher_cmd_pnp.py  kicad_cruncher_cmd_schematic.py  kicad_cruncher_common.py  kicad_cruncher_daemon.py  kicad_cruncher_daemon_state.py  kicad_cruncher_pcb_clean.py  kicad_cruncher_pcb_layer_step.py  kicad_cruncher_pcb_layer_step_config.py  kicad_cruncher_pcb_model_pose.py  kicad_cruncher_pcb_svg_compositor.py  kicad_cruncher_pcb_svg_config.py  kicad_cruncher_pcb_svg_projection.py  kicad_cruncher_plugin_installer.py  kicad_manufacturing_design.py  logging_utils.py  output_path_templates.py  simple_xlsx.py
src/py/kicad_cruncher/kicad_plugins/: __init__.py
src/py/kicad_cruncher/kicad_plugins/kicad-cruncher-tools/: ipc_apply.py  main.py  plugin.json
tests/: rack.toml
tests/L0_public_cli/: STRATUM.toml  test_L0_001_cli_entrypoint.py
tests/L3_public_workflows/: STRATUM.toml  test_L3_001_design_workflow.py  test_L3_002_pcb_layer_step_workflow.py  test_L3_003_manufacturing_workflow.py  test_L3_004_pcb_clean_workflow.py  test_L3_005_daemon_plugin_workflow.py  test_L3_006_plugin_ipc_apply.py
tests/L99_signoff/: STRATUM.toml  test_L99_001_release_signoff.py  test_L99_002_design_docs.py  test_L99_003_quality_tools.py  test_L99_004_interface_design_docs.py  test_L99_005_config_contracts.py
tests/corpus/: README.md
tests/corpus/kicad/board_svg/input/led_component/: led_component.kicad_pcb  led_component.kicad_pro  led_component.kicad_sch
tests/corpus/kicad/projects/4-ch-backplane/: case_metadata.json
tests/corpus/kicad/projects/4-ch-backplane/input/: 4-ch-backplane.kicad_dru  4-ch-backplane.kicad_pro  4-ch-backplane.kicad_sch  CHANGES.kicad_sch  DEBUG.kicad_sch  ETHERNET.kicad_sch  HOUSE_POWER.kicad_sch  INPUT_PROTECTION.kicad_sch  JTAG_MGR.kicad_sch  Laser_Chopper_FE.kicad_sch  NET_SWITCH.kicad_sch  PWR.kicad_sch  SPEEDY_PM__INST.kicad_sch  TPS543320_BUCK.kicad_sch  TPS543620RPYR.kicad_sch  UART_LS.kicad_sch  USB.kicad_sch  USB_UART_4CH.kicad_sch  fp-lib-table  sym-lib-table  test-plan.kicad_sch
tests/corpus/kicad/projects/charge_indicator/input/: 11-10043__charge_indicator__C.kicad_pcb  11-10043__charge_indicator__C.kicad_pro  11-10043__charge_indicator__C.kicad_sch  LED_Controller.kicad_sch
tests/corpus/kicad/projects/cutout_test/: cutout_test.kicad_pcb  cutout_test.kicad_pro  cutout_test.kicad_sch
tests/corpus/kicad/projects/hlr_test/: hlr_test.kicad_pcb  hlr_test.kicad_pro  hlr_test.kicad_sch
tests/corpus/kicad/projects/speedy_processing_module/input/: 11-10084__speedy_processing_module__B.kicad_pro  11-10084__speedy_processing_module__B.kicad_sch  ADC.kicad_sch  Ethernet.kicad_sch  FE.kicad_sch  PLL.kicad_sch  RAM.kicad_sch  TPS62A02_BUCK.kicad_sch  ZYNQ_CONFIG.kicad_sch  ZYNQ_FPGA.kicad_sch  ZYNQ_PS.kicad_sch  ZYNQ_PWR.kicad_sch  top_level_io.kicad_sch
tests/corpus/kicad/projects/taillight/input/: 11-10045__taillight__C.kicad_pcb  11-10045__taillight__C.kicad_pro  11-10045__taillight__C.kicad_sch  LED_Controller.kicad_sch
tests/corpus/kicad/projects/yoshi_mainboard/input/: 11-10080__yoshi-mainboard__A.kicad_pcb  (+4 more)
tests/support_scripts/: install_test.py  py_signoff.py  py_signoff_baseline.json
(+59 files in other folders)
